# opml-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  do-release.yml  run-tests.yml
src/: cli.rs  error.rs  feed.rs  lib.rs  main.rs  opml.rs  report.rs  validation.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/widgets/: feed.rs  mod.rs  tree.rs
tests/: feed_validation.rs  integration_tests.rs  opml_generation.rs  opml_parsing.rs  report_generation.rs
tests/common/: mod.rs
